Fix add-opens in a more global manner