@@ -74,14 +74,6 @@ public class FailoverTest {
         server.setProperty("openejb.extract.configuration", "false");
         server.getJvmOpts().add("-Dopenejb.classloader.forced-load=org.apache.openejb");
 
-        // Add the JAVA 9 specific start-up parameters required by OpenEJB
-        server.getJvmOpts().add("--add-opens=java.base/java.lang=ALL-UNNAMED");
-        server.getJvmOpts().add("--add-opens=java.base/java.io=ALL-UNNAMED");
-        server.getJvmOpts().add("--add-opens=java.base/java.util=ALL-UNNAMED");
-        server.getJvmOpts().add("--add-opens=java.base/java.util.concurrent=ALL-UNNAMED");
-        server.getJvmOpts().add("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED");
-        server.getJvmOpts().add("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED");
-
         final StandaloneServer.ServerService multipoint = server.getServerService("multipoint");
         multipoint.setBind("localhost");
         multipoint.setPort(getNextAvailablePort());
