@@ -96,14 +96,6 @@ public class ReconnectDelayCaseInsensitiveTest {
             server.getProperties().put("name", name);
             server.getProperties().put("openejb.extract.configuration", "false");
 
-            // Add the JAVA 9 specific start-up parameters required by OpenEJB
-            server.getJvmOpts().add("--add-opens=java.base/java.lang=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.base/java.io=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.base/java.util=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.base/java.util.concurrent=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED");
-
             IO.copy(app, Files.path(home, "apps", "itest.jar"));
             IO.copy(IO.read("<openejb><Deployments dir=\"apps/\"/></openejb>"), Files.path(home, "conf", "openejb.xml"));
 
