@@ -96,14 +96,6 @@ public class StickyConnectionStrategyTest {
             root1.setProperty("name", name);
             root1.setProperty("openejb.extract.configuration", "false");
 
-            // Add the JAVA 9 specific start-up parameters required by OpenEJB
-            root1.getJvmOpts().add("--add-opens=java.base/java.lang=ALL-UNNAMED");
-            root1.getJvmOpts().add("--add-opens=java.base/java.io=ALL-UNNAMED");
-            root1.getJvmOpts().add("--add-opens=java.base/java.util=ALL-UNNAMED");
-            root1.getJvmOpts().add("--add-opens=java.base/java.util.concurrent=ALL-UNNAMED");
-            root1.getJvmOpts().add("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED");
-            root1.getJvmOpts().add("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED");
-
             final StandaloneServer.ServerService multipoint = root1.getServerService("multipoint");
             multipoint.setBind("localhost");
             multipoint.setPort(getAvailablePort());
@@ -128,14 +120,6 @@ public class StickyConnectionStrategyTest {
             server.getJvmOpts().add("-Dopenejb.classloader.forced-load=org.apache.openejb");
             server.setProperty("name", name);
             server.setProperty("openejb.extract.configuration", "false");
-
-            // Add the JAVA 9 specific start-up parameters required by OpenEJB
-            server.getJvmOpts().add("--add-opens=java.base/java.lang=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.base/java.io=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.base/java.util=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.base/java.util.concurrent=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED");
-            server.getJvmOpts().add("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED");
 
             IO.copy(app, Files.path(home, "apps", "itest.jar"));
             IO.copy(IO.read("<openejb><Deployments dir=\"apps/\"/></openejb>"), Files.path(home, "conf", "openejb.xml"));
